feat: Réservation de carte v2